2004-01-07  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-utilities.[ch]:
	(nautilus_get_vfs_method_display_name): New funciton
	
	* src/nautilus-window.c:
	Use nautilus_get_vfs_method_display_name to set
	the title
	
	* libnautilus-private/nautilus-icon-container.c:
	Remove tab icon navigation. Makes normal keynav work.
	
	* src/nautilus-shell-ui.xml:
	* src/nautilus-spatial-window.[ch]:
	* src/nautilus-window-manage-views.c:
	Add location button menu to spatial windows.
	
2004-01-06  Dave Camp  <dave@ximian.com>

	* configure.in: Remove components/tree/Makefile from
	AC_OUTPUT.

2004-01-06  Alexander Larsson <alexl@redhat.com>

	Patch from: Juerg Billeter <j@bitron.ch>

	* components/Makefile.am:
	* components/tree/
	Remove tree component (moved to file-manager)
	
	* src/Nautilus_shell.server.in:
	* src/file-manager/Makefile.am:
	Move tree view here

	* src/nautilus-application.c:
	Tree view activation

	* src/file-manager/fm-properties-window.[ch]:
	* src/file-manager/fm-directory-view.c:
	Make properties window take GtkWidget instead of DirectoryView.
	
	* src/file-manager/fm-tree-model.[ch]: 
	* src/file-manager/fm-tree-view.[ch]:
	Move tree view here, first cut at popup menus

2004-01-06  Alexander Larsson <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (button_press_callback): 
	Pop up folder menu on right click in background
	Patch from chris@gnome-de.org

2004-01-06  Alexander Larsson <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Turn on home icon on desktop by default
	
	* libnautilus-private/nautilus-icon-dnd.c:
	* src/nautilus-property-browser.c:
	Handle new svg mime type
	
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-spatial-window-ui.xml:
	Don't use computer icon for templates

2004-01-06  Alexander Larsson <alexl@redhat.com>

	* src/file-manager/fm-directory-view.[ch]: 
	Add get_item_count virtual method.
	Add item count and free space to status bar
