@@ -1,3 +1,12 @@
+2004-01-09  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c: (nautilus_file_can_rename),
+	(nautilus_file_is_nautilus_link):
+	* libnautilus-private/nautilus-link.c:
+	(get_link_style_for_mime_type):
+	* src/file-manager/fm-icon-view.c: (icon_view_handle_uri_list):
+	application/x-desktop is the new desktop file mime type
+
 2004-01-07  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-utilities.[ch]:
